# Arcade

./: .gitignore  Makefile  README.md
_build/arcade/: CMakeLists.txt
_build/games/nibbler/: CMakeLists.txt
_build/games/pacman/: CMakeLists.txt
_build/graphics_libraries/ncurses/: CMakeLists.txt
_build/graphics_libraries/sdl2/: CMakeLists.txt
_build/graphics_libraries/sfml/: CMakeLists.txt
arcade_core/include/: arcade.hpp
arcade_core/src/: arcade.cpp  main.cpp
assets/arcade/: emoji
assets/arcade/maps/: menu.txt
assets/nibbler/: leaderboard  logo  map.txt
assets/nibbler/maps/: map.txt
assets/pacman/: leaderboard  logo  map.txt
assets/pacman/maps/: map.txt
games/nibbler/include/: nibbler.hpp
games/nibbler/src/: nibbler.cpp
games/pacman/include/: pacman.hpp
games/pacman/src/: pacman.cpp
graphics_libraries/ncurses/include/: ncurses.hpp
graphics_libraries/ncurses/src/: ncurses.cpp
graphics_libraries/sdl2/include/: sdl2.hpp
graphics_libraries/sdl2/src/: sdl2.cpp
graphics_libraries/sfml/include/: sfml.hpp
graphics_libraries/sfml/src/: sfml.cpp
interface/: IGame.hpp  IGraphicLib.hpp
